<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawerLayout"
        android:layout_width="300dp"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/drawer_shape">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:background="@drawable/drawer_button_shape"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/drawer_app_name"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/welcomeTextLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/drawer_menu_start_welcome"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loginButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:foreground="@drawable/rip">
            <!--android:background="@drawable/drawer_button_shape"-->
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-sign-in}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_start_login"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
       <LinearLayout
            android:id="@+id/logoutButtonLayout"
            android:layout_width="match_parent"
           android:paddingBottom="10dp"
           android:paddingTop="10dp"
           android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:visibility="gone"
            android:foreground="@drawable/rip">
            <!--android:background="@drawable/drawer_button_shape"-->
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-sign-in}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_start_logout"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
       <LinearLayout
            android:id="@+id/startPageButtonLayout"
            android:layout_width="match_parent"
           android:paddingBottom="10dp"
           android:paddingTop="10dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:foreground="@drawable/rip"
            >
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-home}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_start_page"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/favoritesButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:foreground="@drawable/rip"
            >
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-heart}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_favorites"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settingsButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:foreground="@drawable/rip"
            >
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-cog}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_settings"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/informationButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:foreground="@drawable/rip"
            >
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="{faw-info-circle}"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/colorSecondary"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_menu_info"
                android:paddingLeft="5dp"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/textColorForSelectedBackground"
                android:visibility="visible"></TextView>
        </LinearLayout>
    </LinearLayout>
